--- a/Views/BookStore/Details.cshtml
+++ b/Views/BookStore/Details.cshtml
@@ -8,6 +8,7 @@
 <section class="product-details spad">
     <div class="container">
         <div class="row">
+  
             <div class="col-lg-6 col-md-6">
                 <div class="product__details__pic">
                     <div class="product__details__pic__item">
@@ -17,7 +18,6 @@
 
                 </div>
             </div>
-            <h2>Thông tin chi tiết sách</h2>
             <div class="col-lg-6 col-md-6">
                 <div class="product__details__text">
                     <h3>Tên sách: @Model.Tensach</h3>
@@ -28,7 +28,7 @@
                     </p>
                     <div class="product__details__price">Giá tiền: @Model.Dongia.ToString() VNĐ</div>
 
-                    <a href="#" class="primary-btn">ADD TO CARD</a>
+                    <a href="@Url.Action("ThemGiohang", "GioHang", new { @iMasach = Model.Masach, @strURl=Request.Url.ToString()})" class="primary-btn">THÊM VÀO GIỎ HÀNG</a>
                     <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
                 </div>
             </div>
