--- a/Views/BookStore/Index.cshtml
+++ b/Views/BookStore/Index.cshtml
@@ -19,11 +19,11 @@
                        <ul class="product__item__pic__hover">
                            <li><a href="#"><i class="fa fa-heart"></i></a></li>
                            <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                           <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                           <li><a href="@Url.Action("ThemGiohang", "GioHang", new { @iMasach = book.Masach, @strURl=Request.Url.ToString()})"><i class="fa fa-shopping-cart"></i></a></li>
                        </ul>
                    </div>
                    <div class="product__item__text">
-                       <h6><a href="#">@book.Tensach</a></h6>
+                       <h6><a href="@Url.Action("Details", "BookStore", new { id = book.Masach })">@book.Tensach</a></h6>
                        <h5>@book.Dongia.ToString()</h5>
                    </div>
                </div>
