--- a/Views/BookStore/SPTheoNXB.cshtml
+++ b/Views/BookStore/SPTheoNXB.cshtml
@@ -14,7 +14,7 @@
                     <ul class="product__item__pic__hover">
                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                        <li><a href="@Url.Action("ThemGiohang", "GioHang", new { @iMasach = item.Masach, @strURl=Request.Url.ToString()})"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                 </div>
                 <div class="product__item__text">
